Improve performance across various portions of the codebase by removing capturing lambdas where possible